Convert services to flex to fix image spacing

--- a/style.sass
+++ b/style.sass
@@ -82,15 +82,6 @@ li
 	border-radius: 50%
 	box-shadow: 3px 3px 10px
 
-.floating-down-half
-	margin-top: 330px
-
-.floating-down-twothirds
-	margin-top: 640px
-
-.floating-down-full
-	margin-top: 1100px
-
 %expand-button-template
 	color: $dark-font-green !important
 	text-decoration: underline !important
